Fixed mobileLinks gap

--- a/main.scss
+++ b/main.scss
@@ -98,6 +98,7 @@ header {
     display: flex;
     flex-flow: column;
     align-items: center;
+    justify-content: center;
     position:fixed;
     z-index: 2;
     animation-name: mobileMenu2;
@@ -110,15 +111,17 @@ header {
         width: 50px;
         height: 50px;
         padding: 20px 20px 0px 0px;
+        position:relative;
+        bottom:100px;
         
         
     }
 
     a{
-        margin: 50px;
         text-decoration: none;
         color: white;
         font-weight: bolder;
+        margin: 30px;
     }
 }
 
